feat: Add get friends feature